Revision history for CatalystX-Eta

{{$NEXT}}

0.035  2015-02-25 15:03:12 BRT
    - Added @{$c->req->captures} before calling $c->action_for
      This fixes a bug when you have deep controller actions.

0.03  2015-02-23 16:37:14 BRT
    - prepare_params_for_create and prepare_params_for_update added
      Those options is for changing params before send them to schema.
        sub { my ($self, $c, $params_hashref) = @_; return $params_hashref }
      must return HASHREF for using on $result(set)->execute( with => $params )

0.02  2015-02-21 22:55:08 BRST
    - CheckRoleForPUT and roles_delete fixed:
      if the user requesting delete or update have the role,
      the action will be executed.
      if the role was denied and config->{check_only_roles} is not set,
        the code test if the object have the column (user_id | created_by ) and
        if is equals $c->user->id, the action is executed even without the role.

0.01  2015-02-21 04:39:27 BRST

    - Initial release